# OPT_recon

./: CMakeLists.txt  CMakeLists.txt~  README.txt
CCD/: CMakeLists.txt  CMakeLists.txt~
CCD/apply_Coefficients_mp/: #opt_applyccdcoeffs#  opt_applyccdcoeffs  opt_applyccdcoeffs.py~
CCD/find_Coefficients/: all_gf_R.txt  find_coeffs.py
Crop/: CMakeLists.txt  CMakeLists.txt~  jun26_opt_crop_volume.py  jun27_opt_crop_volume.py  opt_crop_volume.py  opt_crop_volume.py~
GetOPTData/: CMakeLists.txt  CMakeLists.txt~  filehandle.cpp  filehandle.cpp~  filehandle.h  filehandle.h~  getoptdata.cpp  getoptdata.cpp~  optdarks.cpp  optdarks.cpp~  optdarks.h  optdarks.h~  optvars.cpp  optvars.cpp~  optvars.h  optvars.h~
MINC/: CMakeLists.txt  CMakeLists.txt~  useMINC2.c  useMINC2.c~  useMINC2.h  useMINC2.h~
PSF/: .frequencySpaceFilterRecon_part2.c.swp  .psfInFdrFilter.c.swp  3d_psf_simulation_gaussions.py  CMakeLists.txt  CMakeLists.txt~  bandlimitfilter.c  complexmultiply.c  complexmultiply.c~  complexrealmultiply.c  complexrealmultiply.c~  deconvInFdrFilter.c  deconvInFdrFilter.c~  fftshift_c.c  fftshift_c.c~  fftshift_f.c  fftshift_f.c~  forward3dfft.c  forward3dfft.c~  frequencySpaceFilterRecon.py  frequencySpaceFilterRecon_part1.c  frequencySpaceFilterRecon_part2.c  frequencySpaceFilterRecon_part2.c~  frequencySpaceFilterRecon_part3.c  frequencySpaceFilterRecon_part3.c~  inverse3dfft.c  inverse3dfft.c~  limitrecoveryfilter.c  mincmagnitude.c  mincmagnitude.c~  normalizepsf.c  normalizepsf.c~  psfInFdrFilter.c  psfInFdrFilter.c~  psfstackfft.c  psfstackfft.c~  rollofffilter.c  test.c  test.c~
PSF/FDR/: .fdr.c.swp  .fdr.h.swp  Aug3_fdr.c  CMakeLists.txt  CMakeLists.txt~  fdr.c  fdr.c~  fdr.h  fdr.h~  fft_helpers.c  fft_helpers.c~  fft_helpers.h  fft_helpers.h~  psfstack_helpers.c  psfstack_helpers.c~  psfstack_helpers.h  psfstack_helpers.h~  real_complex_helpers.c  real_complex_helpers.c~  real_complex_helpers.h
SignalDecay/: CMakeLists.txt  CMakeLists.txt~  opt_signaldecay  opt_signaldecay.py~
cmake-modules/: FindMINC2.cmake
ctsim-5.2.0/: CMakeLists.txt  CMakeLists.txt~  config.h.cmake
ctsim-5.2.0/cmake-modules/: FindFFTW3.cmake
ctsim-5.2.0/getopt/: CMakeLists.txt
ctsim-5.2.0/include/: projections.h
ctsim-5.2.0/libctsim/: CMakeLists.txt  CMakeLists.txt~  backprojectors.cpp  backprojectors.cpp~  original_backprojectors.cpp  scanner.cpp  scanner.cpp~
ctsim-5.2.0/libctsupport/: CMakeLists.txt  CMakeLists.txt~
ctsim-5.2.0/tools/: CMakeLists.txt  CMakeLists.txt~  original_pjrec.cpp  phm2pj.cpp  pjrec.cpp  pjrec.cpp~
ctsim-5.2.0/wrappers/: CMakeLists.txt  CMakeLists.txt~  imagefile_wrap.cpp  imagefile_wrap.cpp~  projections_wrap.cpp  projections_wrap.cpp~
pyScripts/: #libOPT.py#  #opt_backproject#  CMakeLists.txt  CMakeLists.txt~  libOPT.py  libOPT.py~  masterConfig.py  masterOPT  masterOPT.py~  masterOPT~  opt_backproject  opt_backproject.py~  opt_backproject~
