# add the install targets

CONFIGURE_FILE(${OPT_recon_SOURCE_DIR}/Crop/opt_crop_volume.py ${OPT_recon_SOURCE_DIR}/Crop/opt_crop_volume COPYONLY)

INSTALL(FILES  opt_crop_volume.py DESTINATION bin PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES  opt_crop_volume    DESTINATION bin PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)


#CONFIGURE_FILE(${OPT_SOURCE_DIR}/Crop/opt_crop_box.py ${OPT_SOURCE_DIR}/Crop/opt_crop_box COPYONLY)

#INSTALL(FILES  opt_crop_box.py DESTINATION bin PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)
#INSTALL(FILES  opt_crop_box    DESTINATION bin PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)