
# Deal with MINC2 options
OPTION(USE_MINC2 "Use MINC2 File Format" ON)
MARK_AS_ADVANCED(USE_MINC2)
IF( USE_MINC2 )
  FIND_PACKAGE( MINC2 )
  IF( NOT MINC2_FOUND )
    MESSAGE("You requested to use MINC2 but some components are missing")
  ENDIF( NOT MINC2_FOUND )
ENDIF( USE_MINC2 )

SET(MINC2_SRC
useMINC2.c
)

IF (USE_MINC2 AND MINC2_FOUND)
  ADD_LIBRARY(useMINC2 SHARED ${MINC2_SRC})
  TARGET_LINK_LIBRARIES(useMINC2 ${MINC2_LIBRARY} ${NETCDF_LIBRARY} ${HDF5_LIBRARY})
ENDIF(USE_MINC2 AND MINC2_FOUND)

# add the install targets
INSTALL(TARGETS useMINC2 LIBRARY DESTINATION lib PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE)