# add the install targets

CONFIGURE_FILE(${OPT_recon_SOURCE_DIR}/pyScripts/opt_backproject.py ${OPT_recon_SOURCE_DIR}/pyScripts/opt_backproject COPYONLY)
CONFIGURE_FILE(${OPT_recon_SOURCE_DIR}/pyScripts/masterOPT.py ${OPT_recon_SOURCE_DIR}/pyScripts/masterOPT COPYONLY)

INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/opt_backproject.py DESTINATION bin PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/opt_backproject    DESTINATION bin  PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)

INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/masterOPT.py       DESTINATION bin  PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/masterOPT          DESTINATION bin  PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ GROUP_READ WORLD_READ)


INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/libOPT.py DESTINATION lib/python2.6/site-packages/OPT_recon)
INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/masterConfig.py DESTINATION lib/python2.6/site-packages/OPT_recon)
INSTALL(FILES ${OPT_recon_SOURCE_DIR}/pyScripts/__init__.py DESTINATION lib/python2.6/site-packages/OPT_recon)
